--- a/website-docs/docs/components/datepicker.mdx
+++ b/website-docs/docs/components/datepicker.mdx
@@ -1,130 +1,187 @@
 ---
-sidebar_position: 13
+sidebar_position: 3
 ---
 
-# DatePicker
+import "@nuralyui/datepicker";
+import "@nuralyui/button";
+import "@nuralyui/input";
+import { HyDatepicker } from "@nuralyui/datepicker/react";
+import { HyButton } from "@nuralyui/button/react";
 
 import Tabs from "@theme/Tabs";
 import TabItem from "@theme/TabItem";
-import "@nuralyui/datepicker";
-import { HyDatePicker } from "@nuralyui/datepicker/react";
+import { useState } from "react";
 
-The DatePicker component allows users to select dates from a calendar interface. It supports single date selection, date ranges, different formats, and localization.
+# Datepicker
+
+export const DefaultOpenCalender = () => {
+  return (
+    <>
+      <HyDatepicker
+        style={{ marginTop: "300px", display: "block" }}
+        openedCalender={true}
+        fieldFormat="DD/MM/YYYY"
+        dateValue="20/11/2024"
+        dateplaceholder="20.11.2024"
+      ></HyDatepicker>
+    </>
+  );
+};
+
+## When to use It
+
+This component allows users to choose or enter a date in a defined format.
 
 ## How to use it
 
+<HyDatepicker
+  fieldFormat="DD/MM/YYYY"
+  dateValue="20/11/2024"
+  dateplaceholder="20.11.2024"
+></HyDatepicker>
+<details style={{backgroundColor : 'transparent', border : 'none'}}>
+  <summary>Show code</summary>
 <Tabs>
-  <TabItem value="npm" label="npm">
-
-```shell
-npm install @nuralyui/datepicker
-```
-
-</TabItem>
- <TabItem value="yarn" label="yarn">
-
-```shell
-yarn add @nuralyui/datepicker
-```
-
-</TabItem>
-</Tabs>
-
-## Import
-
-<Tabs>
-  <TabItem value="html" label="HTML">
-
-```html
-<script type="module">
-  import '@nuralyui/datepicker';
-</script>
-
-<hy-datepicker 
-  value="2023-12-01"
-  format="YYYY-MM-DD">
-</hy-datepicker>
-```
-
-</TabItem>
   <TabItem value="react" label="React">
 
 ```jsx
-import { HyDatePicker } from '@nuralyui/datepicker/react';
+import { HyButton } from "@nuralyui/button/react";
 
-function App() {
+export default function App() {
   return (
-    <HyDatePicker 
-      value="2023-12-01"
-      format="YYYY-MM-DD"
-    />
+    <div className="App">
+      <HyDatepicker
+        fieldFormat="DD/MM/YYYY"
+        dateValue="20/11/2024"
+        dateplaceholder="20.11.2024"
+      ></HyDatepicker>
+    </div>
   );
 }
 ```
 
 </TabItem>
+<TabItem value="Html/Angular" label="Html/Angular">
+
+```jsx
+<hy-datepicker
+  fieldFormat="DD/MM/YYYY"
+  dateValue="20/11/2024"
+  dateplaceholder="20.11.2024"
+></hy-datepicker>
+```
+
+</TabItem>
+
 </Tabs>
 
-## API Reference
+</details>
 
-### Properties
+<br />
+<HyDatepicker
+  fieldFormat="DD.MM.YYYY"
+  dateValue="20.11.2024"
+  dateplaceholder="20.11.2024"
+></HyDatepicker>
 
-| Property | Type | Default | Description |
-|----------|------|---------|-------------|
-| `value` | `string` | `undefined` | The selected date value |
-| `format` | `string` | `'YYYY-MM-DD'` | Date format pattern |
-| `placeholder` | `string` | `'Select date'` | Placeholder text |
-| `disabled` | `boolean` | `false` | Whether the datepicker is disabled |
-| `readonly` | `boolean` | `false` | Whether the datepicker is read-only |
-| `min` | `string` | `undefined` | Minimum selectable date |
-| `max` | `string` | `undefined` | Maximum selectable date |
+<details style={{backgroundColor : 'transparent', border : 'none'}}>
+  <summary>Show code</summary>
+<Tabs>
+  <TabItem value="react" label="React">
 
-### Events
+```jsx
+import { HyButton } from "@nuralyui/button/react";
 
-| Event | Description |
-|-------|-------------|
-| `change` | Fired when the date selection changes |
-| `input` | Fired during date input |
-
-## Examples
-
-### Basic DatePicker
-
-```html
-<hy-datepicker placeholder="Select a date"></hy-datepicker>
+export default function App() {
+  return (
+    <div className="App">
+      <HyDatepicker
+        fieldFormat="DD.MM.YYYY"
+        dateValue="20.11.2024"
+        dateplaceholder="20.11.2024"
+      ></HyDatepicker>
+    </div>
+  );
+}
 ```
 
-### With Default Value
+</TabItem>
+<TabItem value="Html/Angular" label="Html/Angular">
 
-```html
-<hy-datepicker value="2023-12-25"></hy-datepicker>
+```jsx
+<hy-datepicker
+  fieldFormat="DD.MM.YYYY"
+  dateValue="20.11.2024"
+  dateplaceholder="20.11.2024"
+></hy-datepicker>
 ```
 
-### Date Range Restrictions
+</TabItem>
 
-```html
-<hy-datepicker 
-  min="2023-01-01" 
-  max="2023-12-31"
-  placeholder="Select date within 2023">
-</hy-datepicker>
-```
+</Tabs>
 
-### Custom Format
+</details>
 
-```html
-<hy-datepicker 
-  format="DD/MM/YYYY"
-  placeholder="DD/MM/YYYY">
-</hy-datepicker>
-```
+# Locales
 
-### Disabled State
+### Arabe
 
-```html
-<hy-datepicker 
-  disabled 
-  value="2023-12-01"
-  placeholder="This is disabled">
-</hy-datepicker>
-```
+By setting the locale to "ar", the date picker will use the formatting, language, and other conventions of the Arabic locale.
+
+<HyDatepicker
+  locale="ar"
+  fieldFormat="DD/MM/YYYY"
+  dateValue="20/11/2024"
+  dateplaceholder="20.11.2024"
+></HyDatepicker>
+
+### Chinese
+
+Similar to "Arabe", "Chinese" is another locale option for the component. Setting the locale to "zh" applies Chinese conventions to the date picker.
+
+<HyDatepicker
+  locale="zh"
+  fieldFormat="DD/MM/YYYY"
+  dateValue="20/11/2024"
+  dateplaceholder="20.11.2024"
+></HyDatepicker>
+
+## Display mode
+
+This section demonstrates how to change the display mode of the HyDatepicker component. There are different modes such as "month" and "year", which change how the date picker is displayed.
+
+### Day
+
+This is a display mode for the component.This is the default, it allowi the users to select a specific day, which allow also change month and year.
+
+<HyDatepicker
+  fieldFormat="DD/MM/YYYY"
+  dateValue="20/11/2024"
+  dateplaceholder="20.11.2024"
+></HyDatepicker>
+
+### Month
+
+This is a display mode for the component. When the mode is set to "month", the date picker shows the months, allowing users to select a specific month.
+
+<HyDatepicker
+  fieldFormat="DD/MM/YYYY"
+  dateValue="20/11/2024"
+  dateplaceholder="20.11.2024"
+  mode="month"
+></HyDatepicker>
+
+### Year
+
+Similar to "month", "year" is another display mode for the component. In this mode, the date picker allows users to select a specific year.
+
+<HyDatepicker
+  fieldFormat="DD/MM/YYYY"
+  dateValue="20/11/2024"
+  dateplaceholder="20.11.2024"
+  mode="year"
+></HyDatepicker>
+
+### Default Display
+
+<DefaultOpenCalender></DefaultOpenCalender>
